#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT(swoole_http_proxy, 0.0.1, iamlosing02@gmail.com)

#AM_INIT_AUTOMAKE(@PACKAGE_NAME@, @PACKAGE_VERSION@)  
#AM_INIT_AUTOMAKE([swoole_http_proxy], [0.0.1])  
AM_INIT_AUTOMAKE

# Checks for programs.

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([makefile])
AC_OUTPUT
